kube/acceptbitcoincash-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: acceptbitcoincash
  namespace: default
spec:
  ports:
    - port: 90
      targetPort: 4000
  selector:
    service: acceptbitcoincash
  type: NodePort
