kube/acceptbitcoincash-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acceptbitcoincash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - acceptbitcoin.cash
    secretName: acceptbitcoincash-tls
  backend:
    serviceName: acceptbitcoincash
    servicePort: 90
  rules:
  - host: acceptbitcoin.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: acceptbitcoincash
          servicePort: 90
